# flutter-webrtc-plus

./: .gitignore  .pubignore  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: build.yml
android/: build.gradle  download_models.gradle  local.properties  settings.gradle
android/src/main/java/com/cloudwebrtc/webrtc/: CameraFilters.kt  FlutterRTCBeautyFilters.kt  FlutterRTCVideoPipe.kt  FlutterRTCVirtualBackground.kt  FlutterWebRTCPlugin.java  GetUserMediaImpl.java  MethodCallHandlerImpl.java  SimulcastVideoEncoderFactoryWrapper.kt
android/src/main/java/com/cloudwebrtc/webrtc/models/: BeautyFilter.kt  CacheFrame.kt  PhotoFilter.kt
android/src/main/java/com/cloudwebrtc/webrtc/utils/: ImageSegmenterHelper.kt
android/src/main/java/com/cloudwebrtc/webrtc/video/: LocalVideoTrack.java
common/cpp/: flutter_webrtc_plugin.cc
common/cpp/include/: flutter_data_channel.h  flutter_frame_capturer.h  flutter_frame_cryptor.h  flutter_media_stream.h  flutter_peerconnection.h  flutter_screen_capture.h  flutter_video_renderer.h  flutter_virtual_background.h  flutter_webrtc.h  flutter_webrtc_base.h
common/cpp/src/: flutter_data_channel.cc  flutter_frame_capturer.cc  flutter_frame_cryptor.cc  flutter_media_stream.cc  flutter_peerconnection.cc  flutter_screen_capture.cc  flutter_video_renderer.cc  flutter_virtual_background.cc  flutter_webrtc.cc  flutter_webrtc_base.cc
common/darwin/Classes/: AudioUtils.m  FlutterRTCDesktopCapturer.m  FlutterRTCFrameCapturer.m  FlutterRTCMediaStream.h  FlutterRTCMediaStream.m  FlutterRTCVideoRenderer.m  FlutterWebRTCPlugin.h  FlutterWebRTCPlugin.m  RTCBeautyFilter.h  RTCBeautyFilter.mm  RTCVideoPipe.swift  RTCVirtualBackground.swift
elinux/: CMakeLists.txt  flutter_webrtc_plus_plugin.cc
example/: pubspec.yaml
example/android/: settings.gradle
example/android/app/: build.gradle  proguard-rules.pro
example/ios/: Podfile
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/src/: capture_frame_sample.dart  device_enumeration_sample.dart  get_display_media_sample.dart  get_user_media_sample.dart  get_user_media_sample_web.dart  loopback_data_channel_sample.dart  loopback_sample_unified_tracks.dart  loopback_sample_with_get_stats.dart  utils.dart
example/lib/src/widgets/: screen_select_dialog.dart
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/: Podfile
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
ios/: flutter_webrtc.podspec  flutter_webrtc_plus.podspec
ios/Classes/: RTCVideoPipe.swift  RTCVirtualBackground.swift
lib/: flutter_webrtc.dart  flutter_webrtc_plus.dart
lib/src/: desktop_capturer.dart  helper.dart  media_devices.dart  media_recorder.dart  video_renderer_extension.dart
lib/src/models/: beauty_filter.dart
lib/src/native/: adapter_type.dart  audio_management.dart  camera_utils.dart  desktop_capturer_impl.dart  event_channel.dart  factory_impl.dart  frame_cryptor_impl.dart  media_recorder_impl.dart  media_stream_impl.dart  media_stream_track_impl.dart  mediadevices_impl.dart  navigator_impl.dart  rtc_data_channel_impl.dart  rtc_dtmf_sender_impl.dart  rtc_peerconnection_impl.dart  rtc_rtp_receiver_impl.dart  rtc_rtp_sender_impl.dart  rtc_rtp_transceiver_impl.dart  rtc_track_event_impl.dart  rtc_video_platform_view.dart  rtc_video_platform_view_controller.dart  rtc_video_renderer_impl.dart  rtc_video_view_impl.dart  utils.dart
lib/src/native/android/: audio_configuration.dart
lib/src/native/ios/: audio_configuration.dart
lib/src/web/: factory_impl.dart  rtc_video_renderer_impl.dart  rtc_video_view_impl.dart
linux/: CMakeLists.txt  flutter_webrtc_plus_plugin.cc  task_runner_linux.cc  task_runner_linux.h
macos/: flutter_webrtc.podspec  flutter_webrtc_plus.podspec
macos/Classes/: RTCBeautyFilter.h  RTCBeautyFilter.mm  RTCVideoPipe.swift  RTCVirtualBackground.swift
test/unit/: rtc_peerconnection_test.dart
test/unit/web/: rtc_videw_view_test.dart
windows/: CMakeLists.txt  flutter_webrtc_plus_plugin.cc  task_runner_windows.cc  task_runner_windows.h
windows/glad/: CMakeLists.txt
